fix over-stretched banner

--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ img.responsive {
 
 .banner {
   width: 40%;
-  max-height: 120px;
   height: auto;
   display: block;
   margin: 2rem auto;
@@ -72,6 +71,6 @@ img.responsive {
 @media (max-width: 600px) {
   .banner {
     width: 80%;
-    max-height: 80px;
+    height: auto;
   }
 }
